--- a/trunk/Admin/scss/partials/_tabs.scss
+++ b/trunk/Admin/scss/partials/_tabs.scss
@@ -24,6 +24,7 @@ body .admin-quickbar {
     border-bottom: 3px solid transparent;
 
     cursor: pointer;
+    user-select: none;
 
     &.active {
       border-color: #2f87b1;
